--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "dependencies": {
-    "njwt": "latest",
+    "jwt-simple": "^0.5.0",
     "node-uuid": "latest"
   },
   "license": "MIT"
